# versatile_audio_super_resolution

./: app.py  inference.py  predict.py  pyproject.toml  requirements.txt  setup.py
audiosr/: lowpass.py  pipeline.py  utils.py
audiosr/clap/open_clip/: factory.py  feature_fusion.py  htsat.py  loss.py  model.py  pann_model.py  pretrained.py  timm_model.py  tokenizer.py  utils.py
audiosr/clap/training/: data.py
audiosr/hifigan/: models.py  models_v2.py
audiosr/latent_diffusion/: util.py
audiosr/latent_diffusion/models/: ddim.py  ddpm.py  plms.py
audiosr/latent_diffusion/modules/: attention.py
audiosr/latent_diffusion/modules/audiomae/: AudioMAE.py  models_mae.py  models_vit.py
audiosr/latent_diffusion/modules/audiomae/util/: crop.py  datasets.py  lr_decay.py  misc.py  pos_embed.py
audiosr/latent_diffusion/modules/diffusionmodules/: model.py  openaimodel.py  util.py
audiosr/latent_diffusion/modules/distributions/: distributions.py
audiosr/latent_diffusion/modules/encoders/: modules.py
audiosr/latent_diffusion/modules/phoneme_encoder/: attentions.py  commons.py  encoder.py
audiosr/latent_diffusion/modules/phoneme_encoder/text/: __init__.py  cleaners.py
audiosr/latent_encoder/: autoencoder.py
audiosr/utilities/: model.py  sampler.py  tools.py
audiosr/utilities/audio/: audio_processing.py  stft.py  tools.py
audiosr/utilities/data/: add_on.py  dataset.py
